[package]
name = "ttuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
cpal = "0.15.0"
pitch-detection = "0.3.0"
rand = "0.8.5"
termion = "2.0.1"
